# containerslib

./: .gitmodules  CMakeLists.txt  README.md
include/: error.hpp  result.hpp
tests/: CMakeLists.txt  result_test.cpp
